--- a/styles/style.css
+++ b/styles/style.css
@@ -131,5 +131,9 @@ body {
     .apresentacao__conteudo {
         width: auto;
     }
+
+    .apresentacao__links__navegacao {
+        width: 60%;
+    }
     
 }
